--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -1,3 +1,20 @@
 ﻿<div class="container">
-    Hello!    
+    <div class="login-container">
+        <div class="panel panel-default">
+            <div class="panel-heading"><h3 class="panel-title">Создать новую комнату или войти в существующую</h3></div>
+            <div class="panel-body">
+                <form class="login-form">
+                    <div class="form-group">
+                        <label for="room-name">Название новой или существующей комнаты</label>
+                        <input type="text" class="form-control" id="room-name" placeholder="Введите название комнаты" autofocus />
+                    </div>
+                    <div class="form-group">
+                        <label for="user-name">Ваше имя в комнате</label>
+                        <input type="text" class="form-control" id="user-name" placeholder="Введите Ваше имя" />
+                    </div>
+                    <button type="submit" class="btn btn-default">Войти в комнату</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
