Added simple login model class and method that get it from login-form.

--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
                         <input type="text" class="form-control" id="room-name" placeholder="Введите название комнаты" autofocus />
                     </div>
                     <div class="form-group">
-                        <label for="user-name">Ваше имя в комнате</label>
-                        <input type="text" class="form-control" id="user-name" placeholder="Введите Ваше имя" />
+                        <label for="player-name">Ваше имя в комнате</label>
+                        <input type="text" class="form-control" id="player-name" placeholder="Введите Ваше имя" />
                     </div>
                     <button type="submit" class="btn btn-default">Войти в комнату</button>
                 </form>
