--- a/Pobezhdatel/Views/Room/Index.cshtml
+++ b/Pobezhdatel/Views/Room/Index.cshtml
@@ -19,7 +19,7 @@
     </div>
 
     <div class="main-chat-input">
-        <textarea id="message-input" class="form-control" rows="7"></textarea>
+        <textarea id="message-input" class="form-control" rows="7" maxlength="1000"></textarea>
         <div class="input-buttons">
             <button id="add-msg-btn" type="button" class="btn btn-default btn-lg">
                 Отправить
