Added razor form.

--- a/Pobezhdatel/Content/Site.css
+++ b/Pobezhdatel/Content/Site.css
@@ -111,8 +111,12 @@
   flex-direction: column;
   align-content: flex-start;
 }
-.login-form button {
+button {
   align-self: center;
+}
+/* Set color for error messages. */
+.field-validation-error {
+  color: red;
 }
 /* On small screen info panel goes up.*/
 @media all and (max-width: 700px) {
