--- a/Pobezhdatel/Content/Site.less
+++ b/Pobezhdatel/Content/Site.less
@@ -137,8 +137,13 @@
     align-content: flex-start;
 }
 
-.login-form button {
+ button {
     align-self: center;
+}
+
+/* Set color for error messages. */
+.field-validation-error {
+    color: red;
 }
 
 /* On small screen info panel goes up.*/
