--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -1,19 +1,25 @@
-﻿<div class="container">
+﻿@model Pobezhdatel.Models.LoginModel
+
+<div class="container">
     <div class="login-container">
         <div class="panel panel-default">
             <div class="panel-heading"><h3 class="panel-title">Создать новую комнату или войти в существующую</h3></div>
             <div class="panel-body">
-                <form class="login-form">
-                    <div class="form-group">
-                        <label for="room-name">Название новой или существующей комнаты</label>
-                        <input type="text" class="form-control" id="room-name" placeholder="Введите название комнаты" autofocus />
+                @using (Html.BeginForm("LogIn", "Home", FormMethod.Post, new { @class = "login-form" }))
+                {
+                    @* If there are an error in this field add class to show error state *@
+                    <div class="form-group @( ViewData.ModelState.Values.Any() && ViewData.ModelState.Values.First().Errors.Count > 0 ? "has-error" : "") )">
+                        @Html.LabelFor(q => q.RoomName, "Название новой или существующей комнаты")
+                        @Html.TextBoxFor(q => q.RoomName, new { @class = "form-control", placeholder = "Введите название комнаты", autofocus = "autofocus" })
+                        @Html.ValidationMessageFor(q => q.RoomName)
                     </div>
-                    <div class="form-group">
-                        <label for="player-name">Ваше имя в комнате</label>
-                        <input type="text" class="form-control" id="player-name" placeholder="Введите Ваше имя" />
+                    <div class="form-group @( ViewData.ModelState.Values.Any() && ViewData.ModelState.Values.Last().Errors.Count > 0 ? "has-error" : "" )">
+                        @Html.LabelFor(q => q.PlayerName, "Ваше имя в комнате")
+                        @Html.TextBoxFor(q => q.PlayerName, new { @class = "form-control", placeholder = "Введите Ваше имя" })
+                        @Html.ValidationMessageFor(q => q.PlayerName)
                     </div>
                     <button type="submit" class="btn btn-default">Войти в комнату</button>
-                </form>
+                }
             </div>
         </div>
     </div>
