--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Pobezhdatel.Models.LoginModel
+﻿@model Pobezhdatel.Models.GameModel
 
 <div class="container">
     <div class="login-container">
