Now user name is taken from log in page.

--- a/Pobezhdatel/Views/Room/Index.cshtml
+++ b/Pobezhdatel/Views/Room/Index.cshtml
@@ -43,7 +43,7 @@
 
 <script>
     // At first ask current player's name, encode it and save
-    var curreentPlayerName = htmlEncode(prompt("Введите Ваше имя:", ""));
+    var curreentPlayerName = "@ViewBag.PlayerName";
     var chat = $.connection.chatHub;    // Reference the auto-generated proxy for the hub
     var directSendingMethod = true;     // Direct (not reversed) sending method (Enter - send, Shift + Enter - new line) is default
 
