--- a/Pobezhdatel/Views/Room/Index.cshtml
+++ b/Pobezhdatel/Views/Room/Index.cshtml
@@ -42,8 +42,8 @@
 </div>
 
 <script>
-    // At first ask current player's name, encode it and save
     var curreentPlayerName = "@ViewBag.PlayerName";
+    var roomName = "@ViewBag.RoomName";
     var chat = $.connection.chatHub;    // Reference the auto-generated proxy for the hub
     var directSendingMethod = true;     // Direct (not reversed) sending method (Enter - send, Shift + Enter - new line) is default
 
@@ -74,6 +74,8 @@
 
     // Start the connection
     $.connection.hub.start().done(function () {
+
+        chat.server.joinRoom(roomName);    // Add user to a room
 
         $("#add-msg-btn").click(function() {                // Handle a click on the button for message addition
             sendMessageToServer($("#message-input").val());
