Added showing the user name and room name in navbar.

--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model Pobezhdatel.Models.GameModel
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+@model Pobezhdatel.Models.GameModel
 
 <div class="container">
     <div class="login-container">
