--- a/Pobezhdatel/Views/Room/Index.cshtml
+++ b/Pobezhdatel/Views/Room/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="container">
+﻿@{
+    Layout = "~/Views/Shared/_LayoutRoom.cshtml";
+}
+
+<div class="container">
     <div class="game-chat-panel">
         <div class="game-info">
             <p>
