--- a/Pobezhdatel/Views/Shared/_Layout.cshtml
+++ b/Pobezhdatel/Views/Shared/_Layout.cshtml
@@ -22,8 +22,21 @@
     <header>
         <nav class="navbar navbar-default">
             <div class="container">
+
+                @* Navbar brand name and button for collapsed navbar *@
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsible-navbar" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="#">Побеждатель</a>
+                </div>
+
+                @* Navbar items *@
+                <div class="collapse navbar-collapse" id="collapsible-navbar">
+                    @RenderSection("GameParameters", false) 
                 </div>
             </div>
         </nav>
