Added ability to add value to dices rolling result or subtract value from dices rolling result.

--- a/Pobezhdatel/Views/Room/Index.cshtml
+++ b/Pobezhdatel/Views/Room/Index.cshtml
@@ -6,15 +6,15 @@
     <div class="game-chat-panel">
         <div class="game-info">
             <p>
-                <b>Бросок кубов: </b>//XdY, где X - количество кубов,
-                Y - количество граней кубов<br />
-                Аналог на русском: //XкY<br />
-                Если куб один, то Х можно не писать: //d6
+                <b>Бросок кубов: </b>//XdY, где X - количество кубов, Y - количество граней кубов<br />
+                Если куб один, то Х можно не писать: //d6<br />
+                <b>Отрицательные кубы: </b>//XuY, в этом случае диапазон броска будет от -Y до Y, включая 0<br />
+                <b>Добавочное значение</b> можно прибавить или отнять, написав после текста броска "+" или "-" и целое число"
             </p>
             <p>
                 В одном броске может быть 1-9 кубов с 1-100 гранями (от 1d1 до 9d100).<br />
                 В любом месте текста сообщения может быть сколько угодно бросков.<br />
-                <b>Примеры: </b>//2d6 //3d24 //1d100
+                <b>Примеры: </b>//2d6 //d10 + 15 //3u100 - 999
             </p>
         </div>
         <div class="game-chat">
