GameModel has been renamed to PlayerLoginModel.

--- a/Pobezhdatel/Views/Login/Index.cshtml
+++ b/Pobezhdatel/Views/Login/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model Pobezhdatel.Models.GameModel
+@model Pobezhdatel.Models.PlayerLoginModel
 
 <div class="container">
     <div class="login-container">
