--- a/Pobezhdatel/Content/Site.css
+++ b/Pobezhdatel/Content/Site.css
@@ -8,10 +8,29 @@
   margin-bottom: 1em;
   width: 100%;
 }
-/* Properties of game chat - most part of screen.*/
-.game-chat {
+.game-chat-container {
   flex-grow: 1;
   width: 200px;
+}
+/* Properties of players field. */
+.chat-players {
+  width: 100%;
+  height: 45px;
+  overflow-y: auto;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: solid 1px #ddd;
+  border-radius: 4px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.chat-players .badge {
+  margin: 0 0.5em 0.5em 0;
+  padding: 5px 5px;
+  border-radius: 8px;
+}
+/* Properties of game chat - most part of screen.*/
+.game-chat {
+  width: 100%;
   height: 500px;
   text-align: center;
   overflow-y: auto;
