--- a/Pobezhdatel/Views/Room/Index.cshtml
+++ b/Pobezhdatel/Views/Room/Index.cshtml
@@ -17,8 +17,11 @@
                 <b>Примеры: </b>//2d6 //d10 + 15 //3u100 - 999
             </p>
         </div>
-        <div class="game-chat">
-            Пока что нет сообщений...
+        <div class="game-chat-container">
+            <div class="chat-players"></div>
+            <div class="game-chat">
+                Пока что нет сообщений...
+            </div>
         </div>
     </div>
 
@@ -116,20 +119,29 @@
     /**
      * Handle event of player join a game room.
      */
-    chat.client.playerJoinRoom = function (playerName, roomName) {
+    chat.client.playerJoinRoom = function (playersString, playerName, roomName) {
 
         // Save player and room names
         chat.state.playerName = playerName;
         chat.state.roomName = roomName;
 
-        alert("Player " + playerName + " CONNECTED to " + roomName);
+        if (isEmptyOrSpaces(playersString)) return;
+
+        // Update joined players list
+        var players = JSON.parse(playersString);
+
+        $(".chat-players").empty();
+
+        for (var i = 0; i < players.length; i++) {
+            $(".chat-players").append("<span id='" + players[i].id + "' class='badge'>" + players[i].name + "</span>");
+        }
     };
 
     /**
      * Handle event of player leave a game room.
      */
-    chat.client.playerLeaveRoom = function (playerName, roomName) {
-        alert("Player " + playerName + " LEAVED to " + roomName);
+    chat.client.playerLeaveRoom = function (connectionId) {
+        $("#" + connectionId).remove();     // Remove badge of specified player from players list
     };
 
     /**
